MDEV-22074 UBSAN: applying zero offset to null pointer in hash.c

The fix: return fast when no work should be performed.