mysys/hash.c
@@ -121,7 +121,7 @@ static inline void my_hash_free_elements(HASH *hash)
     during the free process
   */
   hash->records= 0;
-  if (hash->free)
+  if (hash->free && records)
   {
     HASH_LINK *data=dynamic_element(&hash->array,0,HASH_LINK*);
     HASH_LINK *end= data + records;
